<resources>
    <string name="app_name">Discord Lite</string>
    <string name="welcome_title">DISCORD에 오신 걸 환영합니다</string>
    <string name="welcome_subtitle">어울리고, 게임하고, 가볍게 대화하세요.\n아래를 탭해 시작하세요!</string>
    <string name="welcome_signup">가입하기</string>
    <string name="title_login">돌아오신 것을 환영해요!</string>
    <string name="login_subtitle">다시 만나서 너무 반가워요!</string>
    <string name="login_email_or_phone">이메일 또는 전화번호</string>
    <string name="login_forgot_password">비밀번호를 잊으셨나요?</string>
    <string name="login_passkey">또는, 패스로 로그인하세요</string>
    <string name="login_password_toggle">비밀번호 표시 전환</string>
    <string name="title_server">서버</string>
    <string name="base_url_hint">서버 주소</string>
    <string name="base_url_default">http://10.0.2.2:8080</string>
    <string name="ping_button">Ping</string>
    <string name="ping_result_placeholder">Result will appear here.</string>
    <string name="ping_in_progress">Pinging...</string>
    <string name="title_auth">Auth</string>
    <string name="auth_email_hint">이메일</string>
    <string name="auth_phone_hint">휴대폰 번호</string>
    <string name="auth_username_hint">사용자명</string>
    <string name="auth_display_name_hint">별명</string>
    <string name="auth_password_hint">비밀번호</string>
    <string name="auth_register_button">가입하기</string>
    <string name="auth_login_button">로그인</string>
    <string name="auth_result_placeholder">Not authenticated.</string>
    <string name="auth_register_in_progress">가입 중...</string>
    <string name="auth_login_in_progress">로그인 중...</string>
    <string name="title_friends">친구</string>
    <string name="friend_user_info_placeholder">로그인 정보가 표시됩니다.</string>
    <string name="friend_server_placeholder">서버 정보가 표시됩니다.</string>
    <string name="friend_addressee_hint">친구 사용자 ID</string>
    <string name="friend_request_button">친구 요청 보내기</string>
    <string name="friend_result_placeholder">친구 요청 결과가 표시됩니다.</string>
    <string name="friend_request_in_progress">친구 요청 전송 중...</string>
    <string name="add_friend_title">친구 추가</string>
    <string name="add_friend_subtitle">사용자 이름이나 이메일로 친구 요청을 보낼 수 있어요.</string>
    <string name="add_friend_query_hint">사용자 이름 또는 이메일</string>
    <string name="add_friend_find_button">사용자 찾기</string>
    <string name="add_friend_send_button">친구 요청 보내기</string>
    <string name="add_friend_sent_button">요청 완료</string>
    <string name="add_friend_searching">사용자 찾는 중...</string>
    <string name="add_friend_sending">친구 요청 전송 중...</string>
    <string name="add_friend_missing_query">사용자 이름 또는 이메일을 입력하세요.</string>
    <string name="add_friend_no_user">먼저 사용자를 찾아주세요.</string>
    <string name="add_friend_requires_login">로그인이 필요합니다.</string>
    <string name="add_friend_self_error">본인에게는 친구 요청을 보낼 수 없어요.</string>
    <string name="add_friend_sent">%s님에게 친구 요청을 보냈어요.</string>
    <string name="logout_button">로그아웃</string>
    <string name="register_email_title">전화번호나 이메일 주소를 입력하세요</string>
    <string name="register_toggle_phone">휴대폰</string>
    <string name="register_toggle_email">이메일</string>
    <string name="register_credentials_title">이제 계정을 만들어보세요</string>
    <string name="register_display_title">이름은 무엇인가요?</string>
    <string name="register_display_hint">별명</string>
    <string name="register_display_helper">이모지와 특수 문자를 사용할 수 있습니다.</string>
    <string name="register_skip">건너뛰기</string>
    <string name="next_button">다음</string>
    <string name="register_phone_not_supported">전화번호 가입은 아직 지원되지 않아요.</string>
    <string name="register_required_email">이메일을 입력하세요.</string>
    <string name="register_required_phone">휴대폰 번호를 입력하세요.</string>
    <string name="register_required_username">사용자명을 입력하세요.</string>
    <string name="register_required_password">비밀번호를 입력하세요.</string>
    <string name="register_required_display_name">별명을 입력하세요.</string>
    <string name="nav_home">홈</string>
    <string name="nav_notifications">알림</string>
    <string name="nav_profile">나</string>
    <string name="messages_title">메시지</string>
    <string name="messages_search_hint">검색</string>
    <string name="messages_add_friend">친구 추가하기</string>
    <string name="messages_section">메시지</string>
    <string name="messages_dm_1_title">너비</string>
    <string name="messages_dm_1_preview">타비: 마력</string>
    <string name="messages_dm_1_time">3일</string>
    <string name="messages_dm_2_title">김진성</string>
    <string name="messages_dm_2_preview">김진성: https://discord.gg/7zTbMsdra</string>
    <string name="messages_dm_2_time">10일</string>
    <string name="messages_dm_3_title">동방</string>
    <string name="messages_dm_3_preview">동방, 악세</string>
    <string name="messages_dm_3_time">5개월</string>
    <string name="messages_dm_4_title">Duckko</string>
    <string name="messages_dm_4_preview">Duckko: /register</string>
    <string name="messages_dm_4_time">7개월</string>
    <string name="messages_compose">새 메시지</string>
    <string name="messages_compose_title">새 메시지 작성</string>
    <string name="messages_compose_close">닫기</string>
    <string name="messages_compose_select_friend">보낼 친구 선택</string>
    <string name="messages_compose_loading">친구 목록 불러오는 중...</string>
    <string name="messages_threads_loading">메시지 불러오는 중...</string>
    <string name="messages_compose_empty_friends">친구 목록이 비어있어요.</string>
    <string name="messages_compose_message_label">메시지</string>
    <string name="messages_compose_message_hint">메시지 내용을 입력하세요</string>
    <string name="messages_compose_sending">보내는 중...</string>
    <string name="messages_compose_send">보내기</string>
    <string name="messages_compose_missing_friend">친구를 선택하세요.</string>
    <string name="messages_compose_missing_message">메시지를 입력하세요.</string>
    <string name="messages_compose_preview">나: %s</string>
    <string name="messages_time_now">방금</string>
    <string name="messages_time_minutes">%d분</string>
    <string name="messages_time_hours">%d시간</string>
    <string name="messages_time_days">%d일</string>
    <string name="messages_no_threads">아직 대화가 없어요.</string>
    <string name="message_notification_title">%s님의 새 메시지</string>
    <string name="call_notification_title">음성 통화 요청</string>
    <string name="call_notification_body">%s님이 통화를 요청했어요.</string>
    <string name="call_notification_accept">수락</string>
    <string name="call_notification_decline">거절</string>
    <string name="chat_loading">메시지 불러오는 중...</string>
    <string name="chat_empty">아직 메시지가 없어요.</string>
    <string name="chat_input_hint">메시지를 입력하세요</string>
    <string name="chat_send">보내기</string>
    <string name="chat_send_in_progress">보내는 중...</string>
    <string name="chat_message_too_long">메시지가 너무 깁니다. (최대 4000바이트)</string>
    <string name="server_add">서버 추가</string>
    <string name="notifications_title">알림</string>
    <string name="notifications_menu">알림 옵션</string>
    <string name="notifications_message">배그방</string>
    <string name="notifications_message_subtitle">배그방에 읽지 않은 메시지가 있어요.</string>
    <string name="notifications_message_time">2개월</string>
    <string name="friend_requests_title">친구 요청</string>
    <string name="friend_requests_loading">친구 요청 불러오는 중...</string>
    <string name="friend_requests_empty">대기 중인 친구 요청이 없어요.</string>
    <string name="friend_requests_accept">수락</string>
    <string name="friend_requests_reject">거절</string>
    <string name="friend_requests_accepted">%s님을 친구로 추가했어요.</string>
    <string name="friend_requests_rejected">%s님의 요청을 거절했어요.</string>
    <string name="friend_request_notification_title">새 친구 요청</string>
    <string name="friend_request_notification_body">%s님이 친구 요청을 보냈어요.</string>
    <string name="friend_list_title">친구 목록</string>
    <string name="friend_list_loading">친구 목록 불러오는 중...</string>
    <string name="friend_list_empty">아직 친구가 없어요.</string>
    <string name="friend_list_open_profile">친구 프로필 보기</string>
    <string name="friend_profile_title">친구 프로필</string>
    <string name="friend_profile_close">닫기</string>
    <string name="friend_profile_status_placeholder">상태 메시지를 설정하지 않았어요.</string>
    <string name="notifications_recommended">추천 친구</string>
    <string name="notifications_add">추가하기</string>
    <string name="notifications_friend_1">변백현</string>
    <string name="notifications_friend_1_tag">ddonghi.</string>
    <string name="notifications_friend_2">AimBugCannibals_TTV</string>
    <string name="notifications_friend_2_tag">EVE</string>
    <string name="notifications_show_all">Show All (16)</string>
    <string name="notifications_sheet_title">알림</string>
    <string name="notifications_sheet_role_mentions">역할 멘션 표시하기</string>
    <string name="notifications_sheet_indirect_mentions">간접 멘션 표시하기</string>
    <string name="notifications_sheet_indirect_subtitle">@here, @everyone</string>
    <string name="notifications_sheet_settings">알림 설정</string>
    <string name="profile_default_name">조경민</string>
    <string name="profile_default_username">join2988</string>
    <string name="profile_avatar_text">조</string>
    <string name="profile_status_placeholder">오늘 배운 것은...</string>
    <string name="profile_edit">프로필 편집하기</string>
    <string name="profile_joined">가입 시기</string>
    <string name="profile_joined_date">2017년 9월 11일</string>
    <string name="profile_connections">연결</string>
    <string name="profile_connection_1">스닉먹는고기</string>
    <string name="profile_connection_2">km4852</string>
    <string name="profile_friends">친구</string>
    <string name="profile_notes">참고 (나에게만 보여요)</string>
    <string name="profile_notes_placeholder">메모를 추가하세요.</string>
    <string name="profile_badge">프로필 배지</string>
    <string name="profile_trophy">프로필 업적</string>
    <string name="profile_nitro">Nitro</string>
    <string name="profile_settings">설정</string>
</resources>
